--- a/cards/atlas_nsw.yml
+++ b/cards/atlas_nsw.yml
@@ -14,7 +14,6 @@ detector:
 
   det_width_x: 115.2  ## 256 (36) times MM (sTGC) strip pitch
   det_width_y: 115.2
-  det_strip_noise_rate: [70000, 150000, 336000] ## noise rate per strip in Hz for MM, MDT, sTGC
 
 # default parameters for MM below; sTGC parameters entered in each plane below
   det_width_t: 250 ## ns window
@@ -22,9 +21,10 @@ detector:
   det_n_x_seg: 256
   det_n_y_seg: 0
   def_x_res: 0.2 ## 200 micron spatial resolution
-  det_t_res: 5 ## timing resolution in ns
+  det_t_res: 100 ## timing resolution in ns
 
   planes:
+
     plane_1:
       z: 7460.5
       offset: 1.6  ## staggering by half strip pitch
@@ -32,14 +32,18 @@ detector:
       n_t_seg: 1
       n_x_seg: 36
       x_res: 0.2   ## 200 micron spatial resolution
+      noise_rate: 336000
       type: stgc
+
     plane_2:
       z: 7465.6
       width_t: 25
       n_t_seg: 1
       n_x_seg: 36
       x_res: 0.2
+      noise_rate: 336000
       type: stgc
+
     plane_3:
       z: 7482.4
       offset: 1.6
@@ -47,49 +51,79 @@ detector:
       n_t_seg: 1
       n_x_seg: 36
       x_res: 0.2
+      noise_rate: 336000
       type: stgc
+
     plane_4:
       z: 7487.5
       width_t: 25
       n_t_seg: 1
       n_x_seg: 36
       x_res: 0.2
+      noise_rate: 336000
       type: stgc
+
     plane_5:
       z: 7552.5
+      max_hits: 1
+      noise_rate: 70000
       type: mm
+
     plane_6:
       z: 7564.0
+      max_hits: 1
+      noise_rate: 70000
       type: mm
+
     plane_7:
       z: 7585.7
       tilt: 0.02618 ## 1.5 degrees
+      max_hits: 1
+      noise_rate: 70000
       type: mm
+
     plane_8:
       z: 7597.1
       tilt: -0.02618
+      max_hits: 1
+      noise_rate: 70000
       type: mm
+
     plane_9:
       z: 7683.5
       tilt: 0.02618
+      max_hits: 1
+      noise_rate: 70000
       type: mm
+
     plane_10:
       z: 7695.0
       tilt: -0.02618
+      max_hits: 1
+      noise_rate: 70000
       type: mm
+
     plane_11:
       z: 7716.7
+      max_hits: 1
+      noise_rate: 70000
       type: mm
+
     plane_12:
       z: 7728.1
+      max_hits: 1
+      noise_rate: 70000
       type: mm
+
     plane_13:
       z: 7794.5
       width_t: 25
       n_t_seg: 1
       n_x_seg: 36
       x_res: 0.2
+      noise_rate: 336000
       type: stgc
+
     plane_14:
       z: 7799.6
       offset: 1.6
@@ -97,14 +131,18 @@ detector:
       n_t_seg: 1
       n_x_seg: 36
       x_res: 0.2
+      noise_rate: 336000
       type: stgc
+
     plane_15:
       z: 7816.4
       width_t: 25
       n_t_seg: 1
       n_x_seg: 36
       x_res: 0.2
+      noise_rate: 336000
       type: stgc
+
     plane_16:
       z: 7821.5
       width_t: 25
@@ -112,5 +150,6 @@ detector:
       offset: 1.6
       n_x_seg: 36
       x_res: 0.2
+      noise_rate: 336000
       type: stgc
       
