--- a/cards/atlas_mm_road.yaml
+++ b/cards/atlas_mm_road.yaml
@@ -25,6 +25,8 @@ detector:
   det_n_t_seg: 25 ## window segmentation
   det_t_res: 100 ## timing resolution in ns
 
+  det_sig_eff: 0.95
+
   planes:
 
     plane_1:
