--- a/cards/atlas_mdt.yml
+++ b/cards/atlas_mdt.yml
@@ -14,6 +14,7 @@ detector:
   det_n_x_seg: 10
   det_n_y_seg: 0
   det_t_res: 11 ## timing resolution in ns (not relevant here for MDT currently)
+  det_sig_eff: 0.95
   planes:
     plane_1:
       z: 15
