--- a/cards/atlas_mdt_eml1.yml
+++ b/cards/atlas_mdt_eml1.yml
@@ -1,6 +1,5 @@
 ##### dimensions
 ## width of middle-layer MDT chamber = 82 (multilayer 1) + 170 (spacer) + 82 (multilayer 2) = 334 mm
-## Define 1 a.u = 1 mm
 ## Endcap middle layer starts at z = 14294.5 mm
 ## The wire pitch x in the MDT is 30.035 mm
 ####
@@ -9,11 +8,11 @@ detector:
   name: ATLASMDT_EML1 ## name must include MDT to that hits are handled properly
   det_width_t: 750 ## ns window
   det_n_t_seg: 25 ## window segmentation
-  det_width_x: 300
-  det_width_y: 300
-  det_n_x_seg: 10
+  det_width_x: 1680
+  det_width_y: 1680
+  det_n_x_seg: 56
   det_n_y_seg: 0
-  det_t_res: 5 ## timing resolution in ns
+  det_t_res: 11 ## timing resolution in ns (not used currently)
   det_sig_eff: 0.95
   planes:
     plane_1:
