updating detector cards and removing old

--- a/cards/atlas_nsw_pad_z0.yml
+++ b/cards/atlas_nsw_pad_z0.yml
@@ -27,14 +27,14 @@ detector:
   planes:
 
     plane_1:
-      z: 0.0
+      z: 0
       offset: 1.6  ## staggering by half strip pitch
       width_t: 25  ## 1 BC = 25 ns
       n_t_seg: 1
       n_x_seg: 14
       x_res: 0.2   ## 200 micron spatial resolution
       t_res:   5   ## timing resolution in ns
-      noise_rate: 3360000
+      noise_rate: 336000
       type: stgc
 
     plane_2:
@@ -44,7 +44,7 @@ detector:
       n_x_seg: 14
       x_res: 0.2
       t_res:   5
-      noise_rate: 3360000
+      noise_rate: 336000
       type: stgc
 
     plane_3:
@@ -55,7 +55,7 @@ detector:
       n_x_seg: 14
       x_res: 0.2
       t_res:   5
-      noise_rate: 3360000
+      noise_rate: 336000
       type: stgc
 
     plane_4:
@@ -65,7 +65,7 @@ detector:
       n_x_seg: 14
       x_res: 0.2
       t_res:   5
-      noise_rate: 3360000
+      noise_rate: 336000
       type: stgc
 
     plane_5:
@@ -81,7 +81,7 @@ detector:
       type: mm
 
     plane_7:
-      z: 127.2
+      z: 125.2
       tilt: 0.02618 ## 1.5 degrees
       noise_rate: 70000
       n_x_seg: 128
@@ -97,7 +97,7 @@ detector:
       type: mm
 
     plane_9:
-      z: 178.0
+      z: 223.0
       tilt: 0.02618 ## 1.5 degrees
       noise_rate: 70000
       n_x_seg: 128
@@ -125,13 +125,13 @@ detector:
       type: mm
 
     plane_13:
-      z: 334.5
+      z: 334.0
       width_t: 25
       n_t_seg: 1
       n_x_seg: 14
       x_res: 0.2
       t_res:   5
-      noise_rate: 3360000
+      noise_rate: 336000
       type: stgc
 
     plane_14:
@@ -142,7 +142,7 @@ detector:
       n_x_seg: 14
       x_res: 0.2
       t_res:   5
-      noise_rate: 3360000
+      noise_rate: 336000
       type: stgc
 
     plane_15:
@@ -152,7 +152,7 @@ detector:
       n_x_seg: 14
       x_res: 0.2
       t_res:   5
-      noise_rate: 3360000
+      noise_rate: 336000
       type: stgc
 
     plane_16:
@@ -163,6 +163,6 @@ detector:
       n_x_seg: 14
       x_res: 0.2
       t_res:   5
-      noise_rate: 3360000
+      noise_rate: 336000
       type: stgc
       
